--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                             <a class="nav-link text-dark" href="@Url.RouteUrlLang("Index", ViewContext.RouteData.Values["lang"]?.ToString())">@Localizer["Home"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" href="@Url.RouteUrlLang("Privacy", ViewContext.RouteData.Values["lang"]?.ToString())">Privacy</a>
                         </li>
                     </ul>
                 </div>
@@ -57,10 +57,10 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="/Option1">Option 1</a>
+                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("Index", ViewContext.RouteData.Values["lang"]?.ToString())">@Localizer["Home"]</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="/Option2">Option 2</a>
+                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("Privacy", ViewContext.RouteData.Values["lang"]?.ToString())">Privacy</a>
                     </li>
                 </ul>
             </div>
