--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                             <a class="nav-link text-dark" href="@Url.RouteUrlLang("Index", ViewContext.RouteData.Values["lang"]?.ToString())">@Localizer["Home"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="@Url.RouteUrlLang("Privacy", ViewContext.RouteData.Values["lang"]?.ToString())">Privacy</a>
+                            <a class="nav-link text-dark" href="@Url.RouteUrlLang("Privacy", ViewContext.RouteData.Values["lang"]?.ToString())">@Localizer["Privacy"]</a>
                         </li>
                     </ul>
                 </div>
@@ -60,7 +60,7 @@
                         <a class="nav-link text-dark" href="@Url.RouteUrlLang("Index", ViewContext.RouteData.Values["lang"]?.ToString())">@Localizer["Home"]</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("Privacy", ViewContext.RouteData.Values["lang"]?.ToString())">Privacy</a>
+                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("Privacy", ViewContext.RouteData.Values["lang"]?.ToString())">@Localizer["Privacy"]</a>
                     </li>
                 </ul>
             </div>
