--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" href="@Url.RouteUrlLang("Index", ViewContext.RouteData.Values["lang"]?.ToString())">
+                <a class="navbar-brand" href="@Url.RouteUrlLang("Index", ViewContext.GetLang())">
                     <img class="logo-navbar" src="~/fox.svg" alt="Cortelazor - Sierra de Aracena" />
                     Vive Cortelazor
                 </a>
@@ -31,10 +31,24 @@
                 <div class="navbar-collapse collapse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="@Url.RouteUrlLang("Index", ViewContext.RouteData.Values["lang"]?.ToString())">@Localizer["Home"]</a>
+                            <a class="nav-link text-dark" href="@Url.RouteUrlLang("Index", ViewContext.GetLang())">@Localizer["Home"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="@Url.RouteUrlLang("Privacy", ViewContext.RouteData.Values["lang"]?.ToString())">@Localizer["Privacy"]</a>
+                            <a class="nav-link text-dark" href="@Url.RouteUrlLang("Privacy", ViewContext.GetLang())">@Localizer["Privacy"]</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item dropdown d-none d-lg-block">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                @Localizer[ViewContext.GetLang()]
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="@Url.RouteUrlLang(ViewContext.RouteData.Values["action"]?.ToString(), "es")">Español</a></li>
+                                <li><a class="dropdown-item" href="@Url.RouteUrlLang(ViewContext.RouteData.Values["action"]?.ToString(), "en")">English</a></li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
@@ -48,7 +62,7 @@
         </nav>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-                <a class="navbar-brand" href="@Url.RouteUrlLang("Index", ViewContext.RouteData.Values["lang"]?.ToString())">
+                <a class="navbar-brand" href="@Url.RouteUrlLang("Index", ViewContext.GetLang())">
                     <img class="logo-navbar" src="~/fox.svg" alt="Cortelazor - Sierra de Aracena" />
                     Vive Cortelazor
                 </a>
@@ -57,10 +71,19 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("Index", ViewContext.RouteData.Values["lang"]?.ToString())">@Localizer["Home"]</a>
+                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("Index", ViewContext.GetLang())">@Localizer["Home"]</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("Privacy", ViewContext.RouteData.Values["lang"]?.ToString())">@Localizer["Privacy"]</a>
+                        <a class="nav-link text-dark" href="@Url.RouteUrlLang("Privacy", ViewContext.GetLang())">@Localizer["Privacy"]</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            @Localizer[ViewContext.GetLang()]
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="@Url.RouteUrlLang(ViewContext.RouteData.Values["action"]?.ToString(), "es")">Español</a></li>
+                            <li><a class="dropdown-item" href="@Url.RouteUrlLang(ViewContext.RouteData.Values["action"]?.ToString(), "en")">English</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -74,7 +97,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Vive Cortelazor - <a href="@Url.RouteUrlLang("Privacy", ViewContext.RouteData.Values["lang"]?.ToString())">@Localizer["Privacy"]</a>
+            &copy; 2024 - Vive Cortelazor - <a href="@Url.RouteUrlLang("Privacy", ViewContext.GetLang())">@Localizer["Privacy"]</a>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
