--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" href="@Url.RouteUrlLang("Index", ViewContext.GetLang())">
-                    <img class="logo-navbar" src="~/fox.svg" alt="Vive Cortelazor - Sierra de Aracena" />
+                    <img class="logo-navbar" src="~/fox.svg" alt="Cortelazor - Sierra de Aracena" />
                     Vive Cortelazor
                 </a>
 
@@ -64,7 +64,7 @@
             <div class="offcanvas-header">
                 <a class="navbar-brand" href="@Url.RouteUrlLang("Index", ViewContext.GetLang())">
                     <img class="logo-navbar" src="~/fox.svg" alt="Cortelazor - Sierra de Aracena" />
-                    Vive Cortelazor
+                    Testing Vive Cortelazor
                 </a>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
