--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
             <div class="offcanvas-header">
                 <a class="navbar-brand" href="@Url.RouteUrlLang("Index", ViewContext.GetLang())">
                     <img class="logo-navbar" src="~/fox.svg" alt="Cortelazor - Sierra de Aracena" />
-                    Testing Vive Cortelazor
+                    Vive Cortelazor
                 </a>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
