--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="@Url.RouteUrlLang("Index", ViewContext.GetLang())">
                     <img class="logo-navbar" src="~/fox.svg" alt="Cortelazor - Sierra de Aracena" />
-                    Testing 2 Vive Cortelazor
+                    Vive Cortelazor
                 </a>
 
                 <div class="navbar-collapse collapse">
