--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml
@@ -69,6 +69,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="@Url.RouteUrlLang("Privacy", ViewContext.GetLang())">@Localizer["Privacy"]</a>
                     </li>
+                </ul>
+                <hr />
+                <ul class="navbar-nav flex-grow-1">
                     @await Html.PartialAsync("_LanguagesCombo")
                 </ul>
             </div>
