--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml
@@ -84,8 +84,36 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - Vive Cortelazor - <a href="@Url.RouteUrlLang("Privacy", ViewContext.GetLang())">@Localizer["Privacy"]</a>
+        <div class="container text-center">
+            <div class="row align-items-center">
+                <div class="col-sm-12 col-md-4 order-md-2">
+                    <p>
+                        <a href="@Url.RouteUrlLang("Index", ViewContext.GetLang())" title="@Localizer["Cortelazor and Sierra de Aracena"]">
+                            <img class="logo-footer" src="~/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
+                        </a>
+                    </p>
+                </div>
+
+                <div class="col-sm-12 col-md-4 order-md-1">
+                    <p><a href="@Url.RouteUrlLang("Index", ViewContext.GetLang())" title="@Localizer["Cortelazor and Sierra de Aracena"]">@Localizer["Cortelazor and Sierra de Aracena"]</a></p>
+                    <p><a class="slim" href="@Url.RouteUrlLang("Privacy", ViewContext.GetLang())">@Localizer["Privacy"]</a></p>
+                </div>
+
+                <div class="col-sm-12 col-md-4 order-md-3">
+                    <p class="social-icons">
+                        <a class="social-icon" href="https://www.instagram.com/vivecortelazor/" title="Instagram Vive Cortelazor" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a class="social-icon" href="https://www.facebook.com/vivecortelazor/" title="Facebook Vive Cortelazor" target="_blank">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a class="social-icon" href="mailto:correo@correo.com" title="Email La Casita del Zorro">
+                            <i class="far fa-envelope"></i>
+                        </a>
+                    </p>
+                    <p>@Localizer["Developed by"] <a href="https://www.evaristocuesta.com" target="_blank" title="Evaristo Cuesta sofware developer">Evaristo Cuesta</a></p>
+                </div>
+            </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
