--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml.css
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml.css
@@ -36,9 +36,17 @@ button.accept-policy {
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    background-color: var(--background-color);
+}
+
+.footer .container {
+    margin: 10px auto;
+}
+
+.footer p {
+    margin: 0;
 }
