--- a/src/ViveCortelazor/wwwroot/css/site.css
+++ b/src/ViveCortelazor/wwwroot/css/site.css
@@ -49,6 +49,10 @@ a {
     color: var(--color-palette-dark-1);
 }
 
+.slim {
+    font-weight: var(--bs-body-font-weight);
+}
+
 a:hover {
     color: var(--color-palette-light-1);
 }
@@ -57,6 +61,37 @@ a:hover {
     width: 45px;
 }
 
+.logo-footer {
+    width: 65px;
+}
+
 .dropdown-item.active {
     background-color: var(--color-palette-dark-1);
+}
+
+.social-icons {
+    text-align: center;
+}
+
+a.social-icon {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.5rem;
+    width: 2.5rem;
+    background-color: var(--color-palette-dark-1);
+    color: var(--color-text-button);
+    border-radius: 100%;
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+    margin-right: 1.5rem;
+}
+
+.social-icon:last-child {
+    margin-right: 0;
+}
+
+a.social-icon:hover {
+    background-color: var(--color-text-button);
+    color: var(--color-palette-dark-1);
 }
