--- a/src/ViveCortelazor/Views/Home/Index.cshtml
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = Localizer["Welcome"];
 }
 
-<div id="carouselExample" class="carousel slide">
-    <div class="carousel-inner">
+<section class="hero">
+    <div id="main-carousel" class="carousel slide">
         <div class="carousel-item active">
             <img src="https://www.evaristocuesta.es/fotos-inicio/fotografianaturaleza.jpg" class="d-block w-100" alt="Vive Cortelazor">
         </div>
@@ -15,13 +15,13 @@
         <div class="carousel-item">
             <img src="https://www.evaristocuesta.es/fotos-inicio/fotografianaturaleza.jpg" class="d-block w-100" alt="...">
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#main-carousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#main-carousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-</div>
+</section>
