--- a/src/ViveCortelazor/wwwroot/css/site.css
+++ b/src/ViveCortelazor/wwwroot/css/site.css
@@ -102,3 +102,46 @@ a.social-icon:hover {
     background-color: var(--color-text-button);
     color: var(--color-palette-dark-1);
 }
+
+.hero .carousel {
+    min-height: calc(100vh - 100px);
+    width: 100%;
+    position: relative;
+}
+
+.hero img {
+    position: absolute;
+    inset: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+}
+
+.hero .carousel-item {
+    position: absolute;
+    inset: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow: hidden;
+}
+
+.hero .carousel-item:before {
+    content: "";
+/*    background: color-mix(in srgb, var(--background-color), transparent 60%);*/
+    position: absolute;
+    inset: 0;
+    z-index: 2;
+}
+
+.hero .carousel-container {
+    position: absolute;
+    inset: 90px 64px 64px 64px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 3;
+}
