--- a/src/ViveCortelazor/Views/Home/Index.cshtml
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml
@@ -4,24 +4,47 @@
     ViewData["Title"] = Localizer["Welcome"];
 }
 
-<section class="hero">
-    <div id="main-carousel" class="carousel slide">
-        <div class="carousel-item active">
-            <img src="https://www.evaristocuesta.es/fotos-inicio/fotografianaturaleza.jpg" class="d-block w-100" alt="Vive Cortelazor">
+<div class="carousel-header">
+    <div id="carouselId" class="carousel slide" data-bs-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-bs-target="#carouselId" data-bs-slide-to="0" class=""></li>
+            <li data-bs-target="#carouselId" data-bs-slide-to="1" class="active" aria-current="true"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item">
+                <img src="https://www.evaristocuesta.es/fotos-inicio/fotografianaturaleza.jpg" class="img-fluid" alt="Image">
+                <div class="carousel-caption">
+                    <div class="text-center p-4" style="max-width: 900px;">
+                        <h4 class="text-white text-uppercase fw-bold mb-3 mb-md-4 wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">Solution For All Type Of Visas</h4>
+                        <h1 class="display-1 text-capitalize text-white mb-3 mb-md-4 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">Immigration Process Starts Here!</h1>
+                        <p class="text-white mb-4 mb-md-5 fs-5 wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        </p>
+                        <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5 wow fadeInUp" data-wow-delay="0.7s" href="#" style="visibility: visible; animation-delay: 0.7s; animation-name: fadeInUp;">More Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item active">
+                <img src="https://www.evaristocuesta.es/fotos-inicio/fotografianaturaleza.jpg" class="img-fluid" alt="Image">
+                <div class="carousel-caption">
+                    <div class="text-center p-4" style="max-width: 900px;">
+                        <h5 class="text-white text-uppercase fw-bold mb-3 mb-md-4 wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">Solution For All Type Of Visas</h5>
+                        <h1 class="display-1 text-capitalize text-white mb-3 mb-md-4 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">Best Visa Immigrations Services</h1>
+                        <p class="text-white mb-4 mb-md-5 fs-5 wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        </p>
+                        <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5 wow fadeInUp" data-wow-delay="0.7s" href="#" style="visibility: visible; animation-delay: 0.7s; animation-name: fadeInUp;">More Details</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="carousel-item">
-            <img src="https://www.evaristocuesta.es/fotos-inicio/fotografianocturna.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="https://www.evaristocuesta.es/fotos-inicio/fotografianaturaleza.jpg" class="d-block w-100" alt="...">
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#main-carousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon bg-secondary wow fadeInLeft" data-wow-delay="0.2s" aria-hidden="false" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;"></span>
+            <span class="visually-hidden-focusable">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#main-carousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselId" data-bs-slide="next">
+            <span class="carousel-control-next-icon bg-secondary wow fadeInRight" data-wow-delay="0.2s" aria-hidden="false" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInRight;"></span>
+            <span class="visually-hidden-focusable">Next</span>
         </button>
     </div>
-</section>
+</div>
