--- a/src/ViveCortelazor/wwwroot/css/site.css
+++ b/src/ViveCortelazor/wwwroot/css/site.css
@@ -103,45 +103,86 @@ a.social-icon:hover {
     color: var(--color-palette-dark-1);
 }
 
-.hero .carousel {
-    min-height: calc(100vh - 100px);
-    width: 100%;
-    position: relative;
+/*** Carousel Hero Header Start ***/
+.carousel-header .carousel-control-prev .carousel-control-prev-icon,
+.carousel-header .carousel-control-next .carousel-control-next-icon {
+    width: 4rem;
+    height: 4rem;
+    margin-left: -60px;
+    border-radius: 50%;
+    background-size: 60% 60%;
+    transition: 0.5s;
 }
 
-.hero img {
+.carousel-header .carousel-control-next .carousel-control-next-icon {
+    margin-left: 0;
+    margin-right: -60px;
+}
+
+.carousel-header .carousel .carousel-indicators {
+    padding-bottom: 0;
+    transition: 0.5s;
+}
+
+
+.carousel-header .carousel .carousel-indicators li {
+    width: 8px;
+    height: 8px;
+    border: 8px solid var(--bs-primary);
+    border-radius: 50%;
+    margin-right: 30px;
+    transition: 0.5s;
+}
+
+.carousel-header .carousel .carousel-indicators li.active {
+    width: 8px;
+    height: 8px;
+    border: 8px solid var(--bs-secondary);
+}
+
+.carousel-header .carousel-inner .carousel-item {
+    position: relative;
+    min-height: 100vh
+}
+
+.carousel-header .carousel-inner .carousel-item img {
     position: absolute;
-    inset: 0;
-    display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: 1;
 }
 
-.hero .carousel-item {
+.carousel-header .carousel-inner .carousel-item .carousel-caption {
     position: absolute;
-    inset: 0;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    overflow: hidden;
-}
-
-.hero .carousel-item:before {
-    content: "";
-/*    background: color-mix(in srgb, var(--background-color), transparent 60%);*/
-    position: absolute;
-    inset: 0;
-    z-index: 2;
-}
-
-.hero .carousel-container {
-    position: absolute;
-    inset: 90px 64px 64px 64px;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-direction: column;
-    z-index: 3;
+    justify-content: center;
+    text-align: center;
+    background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, 0.6));
+    background-size: cover;
 }
+
+
+@media (max-width: 768px) {
+    .carousel-header .carousel-control-prev .carousel-control-prev-icon,
+    .carousel-header .carousel-control-next .carousel-control-next-icon {
+        margin-top: 500px;
+    }
+
+    .carousel-header .carousel-control-prev .carousel-control-prev-icon {
+        margin-left: 0px;
+    }
+
+    .carousel-header .carousel-control-next .carousel-control-next-icon {
+        margin-right: 0px;
+    }
+
+    .carousel-header .carousel .carousel-indicators {
+        padding: 0;
+    }
+}
+/*** Carousel Hero Header End ***/
