Change prev and next button size with max-width 768

--- a/src/ViveCortelazor/wwwroot/css/site.css
+++ b/src/ViveCortelazor/wwwroot/css/site.css
@@ -168,9 +168,12 @@ a.social-icon:hover {
 
 
 @media (max-width: 768px) {
+
     .carousel-header .carousel-control-prev .carousel-control-prev-icon,
     .carousel-header .carousel-control-next .carousel-control-next-icon {
         margin-top: 500px;
+        width: 3rem;
+        height: 3rem;
     }
 
     .carousel-header .carousel-control-prev .carousel-control-prev-icon {
