--- a/src/ViveCortelazor/Views/Home/Index.cshtml
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml
@@ -11,29 +11,27 @@
             <li data-bs-target="#carouselId" data-bs-slide-to="1" class="active" aria-current="true"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
-            <div class="carousel-item">
-                <img src="https://www.evaristocuesta.es/fotos-inicio/fotografianaturaleza.jpg" class="img-fluid" alt="Image">
-                <div class="carousel-caption">
-                    <div class="text-center p-4" style="max-width: 900px;">
-                        <h4 class="text-white text-uppercase fw-bold mb-3 mb-md-4 wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">Solution For All Type Of Visas</h4>
-                        <h1 class="display-1 text-capitalize text-white mb-3 mb-md-4 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">Immigration Process Starts Here!</h1>
-                        <p class="text-white mb-4 mb-md-5 fs-5 wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                        </p>
-                        <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5 wow fadeInUp" data-wow-delay="0.7s" href="#" style="visibility: visible; animation-delay: 0.7s; animation-name: fadeInUp;">More Details</a>
-                    </div>
-                </div>
-            </div>
             <div class="carousel-item active">
                 <img src="https://www.evaristocuesta.es/fotos-inicio/fotografianaturaleza.jpg" class="img-fluid" alt="Image">
                 <div class="carousel-caption">
-                    <div class="text-center p-4" style="max-width: 900px;">
-                        <h5 class="text-white text-uppercase fw-bold mb-3 mb-md-4 wow fadeInUp" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">Solution For All Type Of Visas</h5>
-                        <h1 class="display-1 text-capitalize text-white mb-3 mb-md-4 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">Best Visa Immigrations Services</h1>
-                        <p class="text-white mb-4 mb-md-5 fs-5 wow fadeInUp" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
+                    <div class="text-center p-4">
+                        <h5 class="text-white text-uppercase fw-bold mb-3 mb-md-4">Cortelazor</h5>
+                        <h1 class="display-1 text-capitalize text-white mb-3 mb-md-4">Qué ver</h1>
+                        <p class="text-white mb-4 mb-md-5 fs-5">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                         </p>
-                        <a class="btn btn-primary border-secondary rounded-pill text-white py-3 px-5 wow fadeInUp" data-wow-delay="0.7s" href="#" style="visibility: visible; animation-delay: 0.7s; animation-name: fadeInUp;">More Details</a>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://www.evaristocuesta.es/fotos-inicio/fotografianaturaleza.jpg" class="img-fluid" alt="Image">
+                <div class="carousel-caption">
+                    <div class="text-center p-4">
+                        <h5 class="text-white text-uppercase fw-bold mb-3 mb-md-4">Cortelazor</h5>
+                        <h1 class="display-1 text-capitalize text-white mb-3 mb-md-4">Qué hacer</h1>
+                        <p class="text-white mb-4 mb-md-5 fs-5">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        </p>
                     </div>
                 </div>
             </div>
