--- a/src/ViveCortelazor/Views/Home/Index.cshtml
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml
@@ -6,16 +6,16 @@
 
 <div class="carousel-header">
     <div id="carouselId" class="carousel slide" data-bs-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-bs-target="#carouselId" data-bs-slide-to="0" class=""></li>
-            <li data-bs-target="#carouselId" data-bs-slide-to="1" class="active" aria-current="true"></li>
-        </ol>
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselId" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselId" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        </div>
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-                <img src="https://www.evaristocuesta.es/fotos-inicio/fotografianaturaleza.jpg" class="img-fluid" alt="Image">
+                <img loading="lazy" src="https://www.evaristocuesta.es/fotos-inicio/fotografianaturaleza.jpg" class="img-fluid" alt="Image">
                 <div class="carousel-caption">
                     <div class="text-center p-4">
-                        <h5 class="text-white text-uppercase fw-bold mb-3 mb-md-4">Cortelazor</h5>
+                        <h5 class="text-white text-uppercase fw-bold mb-3 mb-md-4">Vive Cortelazor</h5>
                         <h1 class="display-1 text-capitalize text-white mb-3 mb-md-4">Qué ver</h1>
                         <p class="text-white mb-4 mb-md-5 fs-5">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -24,10 +24,10 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://www.evaristocuesta.es/fotos-inicio/fotografianaturaleza.jpg" class="img-fluid" alt="Image">
+                <img loading="lazy" src="https://www.evaristocuesta.es/fotos-inicio/fotografianocturna.jpg" class="img-fluid" alt="Image">
                 <div class="carousel-caption">
                     <div class="text-center p-4">
-                        <h5 class="text-white text-uppercase fw-bold mb-3 mb-md-4">Cortelazor</h5>
+                        <h5 class="text-white text-uppercase fw-bold mb-3 mb-md-4">Vive Cortelazor</h5>
                         <h1 class="display-1 text-capitalize text-white mb-3 mb-md-4">Qué hacer</h1>
                         <p class="text-white mb-4 mb-md-5 fs-5">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
@@ -37,11 +37,11 @@
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon bg-secondary wow fadeInLeft" data-wow-delay="0.2s" aria-hidden="false" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;"></span>
+            <span class="carousel-control-prev-icon bg-secondary" aria-hidden="false"></span>
             <span class="visually-hidden-focusable">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselId" data-bs-slide="next">
-            <span class="carousel-control-next-icon bg-secondary wow fadeInRight" data-wow-delay="0.2s" aria-hidden="false" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInRight;"></span>
+            <span class="carousel-control-next-icon bg-secondary"></span>
             <span class="visually-hidden-focusable">Next</span>
         </button>
     </div>
