Add a different layout for index page

--- a/src/ViveCortelazor/Views/Home/Index.cshtml
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@inject IViewLocalizer Localizer
 
 @{
-    ViewData["Title"] = Localizer["Welcome"];
+    Layout = "~/Views/Shared/_LayoutIndex.cshtml";
 }
 
 <div class="carousel-header">
