Costemics in navbar toggler button in main page

--- a/src/ViveCortelazor/Views/Shared/_LayoutIndex.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_LayoutIndex.cshtml
@@ -22,7 +22,7 @@
 </head>
 <body>
     <header>
-        <button class="z-3 btn btn-outline-secondary me-2 hamburguer" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+        <button class="z-3 btn btn-outline-light me-2 custom-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
