Fix logo and footer in main page

--- a/src/ViveCortelazor/Views/Home/Index.cshtml
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml
@@ -4,10 +4,6 @@
     Layout = "~/Views/Shared/_LayoutIndex.cshtml";
 }
 
-<div class="main-logo z-3 position-fixed start-50 translate-middle-x">
-    <img class="img-fluid" src="~/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
-</div>
-
 <div class="carousel-header">
     <div id="carouselId" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -19,11 +15,9 @@
                 <img loading="lazy" src="https://www.evaristocuesta.es/fotos-inicio/fotografianaturaleza.jpg" class="img-fluid" alt="Image">
                 <div class="carousel-caption">
                     <div class="text-center p-4">
-                        <h5 class="text-white text-uppercase fw-bold mb-3 mb-md-4">Qué ver</h5>
-                        <h1 class="display-1 text-capitalize text-white mb-3 mb-md-4">VIVE CORTELAZOR</h1>
-                        <p class="text-white mb-4 mb-md-5 fs-5">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                        </p>
+                        <img class="z-3 start-50 translate-middle-x main-logo img-fluid" src="~/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
+                        <h5 class="text-white text-uppercase fw-bold mb-3 mb-md-4">Vive Cortelazor</h5>
+                        <h1 class="display-1 text-capitalize text-white mb-3 mb-md-4">Qué ver</h1>
                     </div>
                 </div>
             </div>
@@ -31,11 +25,9 @@
                 <img loading="lazy" src="https://www.evaristocuesta.es/fotos-inicio/fotografianocturna.jpg" class="img-fluid" alt="Image">
                 <div class="carousel-caption">
                     <div class="text-center p-4">
+                        <img class="z-3 start-50 translate-middle-x main-logo img-fluid" src="~/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
                         <h5 class="text-white text-uppercase fw-bold mb-3 mb-md-4">Vive Cortelazor</h5>
                         <h1 class="display-1 text-capitalize text-white mb-3 mb-md-4">Qué hacer</h1>
-                        <p class="text-white mb-4 mb-md-5 fs-5">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                        </p>
                     </div>
                 </div>
             </div>
