--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                 </div>
 
                 <form class="d-flex">
-                    <button class="btn btn-outline-secondary me-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <button class="btn btn-outline-secondary me-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </form>
