--- a/src/ViveCortelazor/Views/Home/Index.cshtml
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
         </div>
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-                <img loading="lazy" src="https://www.evaristocuesta.es/fotos-inicio/fotografianaturaleza.jpg" class="img-fluid" alt="Image">
+                <img loading="lazy" src="~/images/carousel/image1.jpg" class="img-fluid" alt="Image">
                 <div class="carousel-caption">
                     <div class="text-center p-4">
                         <img class="z-3 start-50 translate-middle-x main-logo img-fluid" src="~/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img loading="lazy" src="https://www.evaristocuesta.es/fotos-inicio/fotografianocturna.jpg" class="img-fluid" alt="Image">
+                <img loading="lazy" src="~/images/carousel/image2.jpg" class="img-fluid" alt="Image">
                 <div class="carousel-caption">
                     <div class="text-center p-4">
                         <img class="z-3 start-50 translate-middle-x main-logo img-fluid" src="~/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
