Fix carousel logo position

--- a/src/ViveCortelazor/Views/Home/Index.cshtml
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
                 <img loading="lazy" src="~/images/carousel/image1.jpg" class="img-fluid" alt="Image">
                 <div class="carousel-caption">
                     <div class="text-center p-4">
-                        <img class="z-3 start-50 translate-middle-x main-logo img-fluid" src="~/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
+                        <img class="z-3 main-logo mb-3 mb-md-4" src="~/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
                         <h5 class="text-white text-uppercase fw-bold mb-3 mb-md-4">Vive Cortelazor</h5>
                         <h1 class="display-1 text-capitalize text-white mb-3 mb-md-4">Qué ver</h1>
                     </div>
@@ -25,9 +25,9 @@
                 <img loading="lazy" src="~/images/carousel/image2.jpg" class="img-fluid" alt="Image">
                 <div class="carousel-caption">
                     <div class="text-center p-4">
-                        <img class="z-3 start-50 translate-middle-x main-logo img-fluid" src="~/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
+                        <img class="z-3 main-logo mb-3 mb-md-4" src="~/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
                         <h5 class="text-white text-uppercase fw-bold mb-3 mb-md-4">Vive Cortelazor</h5>
-                        <h1 class="display-1 text-capitalize text-white mb-3 mb-md-4">Qué hacer</h1>
+                        <h2 class="display-1 text-capitalize text-white mb-3 mb-md-4">Qué hacer</h2>
                     </div>
                 </div>
             </div>
