--- a/src/ViveCortelazor/wwwroot/css/site.css
+++ b/src/ViveCortelazor/wwwroot/css/site.css
@@ -73,10 +73,8 @@ a:hover {
 }
 
 .main-logo {
-    position: absolute !important;
     width: 150px !important;
     height: 150px !important;
-    top: 100px !important;
 }
 
 .custom-toggler {
@@ -146,7 +144,7 @@ a.social-icon:hover {
     min-height: 100vh
 }
 
-    .carousel-header .carousel-inner .carousel-item img {
+    .carousel-header .carousel-inner .carousel-item > img {
         position: absolute;
         width: 100%;
         height: 100%;
