--- a/src/ViveCortelazor/Views/Shared/_CookiesBanner.cshtml.css
+++ b/src/ViveCortelazor/Views/Shared/_CookiesBanner.cshtml.css
@@ -16,7 +16,7 @@
     bottom: 0;
     left: 0;
     background: #f4f4f4;
-    padding: 5px;
+    padding: 1px 5px 5px 5px;
     margin: 5px;
     border-radius: 50%;
     cursor: pointer;
@@ -90,7 +90,7 @@ input:checked + label {
 /* Buttons styles */
 .cookie-button {
     cursor: pointer;
-    width: 160px;
+    width: 200px;
     height: 36px;
     border: none;
     border-radius: 100px;
