Add robots.txt and sitemap.xml

--- a/src/ViveCortelazor/Views/Shared/_CookiesBanner.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_CookiesBanner.cshtml
@@ -33,5 +33,5 @@
 
 <!-- Minimized Banner Button -->
 <div id="minimizedConsentBanner" onclick="openConsentBanner()">
-    <img alt="@Localizer["Cookies settings"]" src="~/cookie-color.svg" />
+    <img alt="@Localizer["Cookies settings"]" src="~/images/cookie-color.svg" />
 </div>
