--- a/src/ViveCortelazor/Views/Shared/_LayoutIndex.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_LayoutIndex.cshtml
@@ -30,7 +30,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap">
-    <link rel="icon" type="image/svg+xml" href="~/fox.svg">
+    <link rel="icon" type="image/svg+xml" href="~/images/fox.svg">
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -48,7 +48,7 @@
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
                 <a class="navbar-brand" href="@Url.RouteUrlLang("Index", ViewContext.GetLang())">
-                    <img class="logo-navbar" src="~/fox.svg" alt="Cortelazor - Sierra de Aracena" />
+                    <img class="logo-navbar" src="~/images/fox.svg" alt="Cortelazor - Sierra de Aracena" />
                     Vive Cortelazor
                 </a>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -80,7 +80,7 @@
                 <div class="col-sm-12 col-md-4 order-md-2">
                     <p>
                         <a href="@Url.RouteUrlLang("Index", ViewContext.GetLang())" title="@Localizer["Cortelazor and Sierra de Aracena"]">
-                            <img class="logo-footer" src="~/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
+                            <img class="logo-footer" src="~/images/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
                         </a>
                     </p>
                 </div>
