Add meta for seo

--- a/src/ViveCortelazor/Views/Shared/_CookiesBanner.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_CookiesBanner.cshtml
@@ -1,6 +1,4 @@
-﻿@using ViveCortelazor.Extensions
-
-@inject IViewLocalizer Localizer
+﻿@inject IViewLocalizer Localizer
 
 
 <!-- Cookie Consent Banner -->
