Add introduction text

--- a/src/ViveCortelazor/Views/Home/Index.cshtml
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml
@@ -40,3 +40,21 @@
         </button>
     </div>
 </div>
+
+<div class="container introduction">
+    <div class="row">
+        <h4 class="text-center">@Localizer["Title"]</h4>
+    </div>
+    <div class="row">
+        <div class="col-md">
+            <p>@Localizer["Introduction1"]</p>
+        </div>
+        <div class="col-md">
+            <p>@Localizer["Introduction2"]</p>
+        </div>
+        <div class="col-md">
+            <p>@Localizer["Introduction3"]</p>
+        </div>
+    </div>
+
+</div>
