Change meta images

--- a/src/ViveCortelazor/Views/Shared/_MetaSeo.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_MetaSeo.cshtml
@@ -2,25 +2,25 @@
 
 <meta name="description" content="@Localizer["Description"]" />
 <meta name="keywords" content="@Localizer["Keywords"]" />
-<meta name="image" content="https://www.vivecortelazor.es/images/fox.svg" />
+<meta name="image" content="https://www.vivecortelazor.es/images/carousel/image1.jpg" />
 <meta name="author" content="Evaristo Cuesta" />
 <!-- Google - Search Engine Tags-->
 <meta itemprop="name" content="Vive Cortelazor - Sierra de Aracena" />
 <meta itemprop="description" content="@Localizer["Description"]" />
-<meta itemprop="image" content="https://www.vivecortelazor.es/images/fox.svg" />
+<meta itemprop="image" content="https://www.vivecortelazor.es/images/carousel/image1.jpg" />
 <!-- Twitter Meta Tags-->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Vive Cortelazor - Sierra de Aracena" />
 <meta name="twitter:description" content="@Localizer["Description"]" />
-<meta name="twitter:image" content="https://www.vivecortelazor.es/images/fox.svg" />
+<meta name="twitter:image" content="https://www.vivecortelazor.es/images/carousel/image1.jpg" />
 <!-- Facebook Meta Tags-->
 <meta property="og:url" content="https://www.evaristocuesta.com" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Vive Cortelazor - Sierra de Aracena" />
 <meta property="og:site_name" content="Vive Cortelazor - Sierra de Aracena" />
 <meta property="og:description" content="@Localizer["Description"]" />
-<meta property="og:image" content="https://www.vivecortelazor.es/images/fox.svg" />
-<meta property="og:image:secure_url" content="https://www.vivecortelazor.es/images/fox.svg" />
+<meta property="og:image" content="https://www.vivecortelazor.es/images/carousel/image1.jpg" />
+<meta property="og:image:secure_url" content="https://www.vivecortelazor.es/images/carousel/image1.jpg" />
 <meta property="og:image:alt" content="@Localizer["Description"]" />
-<meta property="og:image:height" content="1080" />
+<meta property="og:image:height" content="1920" />
 <meta property="og:image:width" content="1080" />
