Add youtube link

--- a/src/ViveCortelazor/Views/Shared/_Footer.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Footer.cshtml
@@ -26,6 +26,9 @@
                     <a class="social-icon" href="https://www.facebook.com/vivecortelazor/" title="Facebook Vive Cortelazor" target="_blank">
                         <i class="fab fa-facebook"></i>
                     </a>
+                    <a class="social-icon" href="https://www.youtube.com/@@vivecortelazor" title="Youtube Vive Cortelazor" target="_blank">
+                        <i class="fab fa-youtube"></i>
+                    </a>
                     <a class="social-icon" href="mailto:correo@correo.com" title="Email Vive Cortelazor">
                         <i class="far fa-envelope"></i>
                     </a>
