--- a/src/ViveCortelazor/Views/Shared/_Footer.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Footer.cshtml
@@ -29,7 +29,7 @@
                     <a class="social-icon" href="https://www.youtube.com/@@vivecortelazor" title="Youtube Vive Cortelazor" target="_blank">
                         <i class="fab fa-youtube"></i>
                     </a>
-                    <a class="social-icon" href="mailto:correo@correo.com" title="Email Vive Cortelazor">
+                    <a class="social-icon" href="mailto:info@vivecortelazor.es" title="Email Vive Cortelazor">
                         <i class="far fa-envelope"></i>
                     </a>
                 </p>
