Add reject all button and change script to don't allow GA4 at the beginning

--- a/src/ViveCortelazor/Views/Shared/_CookiesBanner.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_CookiesBanner.cshtml
@@ -24,8 +24,9 @@
         </div>
     </div>
 
-    <button onclick="setCookieConsent()" class="cookie-button">@Localizer["Save Preferences"]</button>
-    <button onclick="allowAllCookies()" class="cookie-button">@Localizer["Allow All Cookies"]</button>
+    <button onclick="setCookieConsent()" class="cookie-button cookie-button-preferences">@Localizer["Save Preferences"]</button>
+    <button onclick="rejectAll()" class="cookie-button">@Localizer["Reject All"]</button>
+    <button onclick="acceptAll()" class="cookie-button">@Localizer["Accept All"]</button>
 </div>
 
 
