--- a/src/ViveCortelazor/Views/Shared/_CookiesBanner.cshtml.css
+++ b/src/ViveCortelazor/Views/Shared/_CookiesBanner.cshtml.css
@@ -25,9 +25,9 @@
     height: 30px;
 }
 
-    #minimizedConsentBanner img {
-        vertical-align: top;
-    }
+#minimizedConsentBanner img {
+    vertical-align: top;
+}
 
 /* Container to centar the group but align checkboxs to the left */
 .cookie-group {
@@ -62,26 +62,26 @@ label {
     margin-right: 8px;
 }
 
-    label:after {
-        content: '';
-        position: absolute;
-        top: 3px;
-        left: 4px;
-        width: 20px;
-        height: 20px;
-        background: #fff;
-        border-radius: 90px;
-        transition: 0.3s;
-    }
+label:after {
+    content: '';
+    position: absolute;
+    top: 3px;
+    left: 4px;
+    width: 20px;
+    height: 20px;
+    background: #fff;
+    border-radius: 90px;
+    transition: 0.3s;
+}
 
 input:checked + label {
     background: #5599ff;
 }
 
-    input:checked + label:after {
-        left: calc(100% - 4px);
-        transform: translateX(-100%);
-    }
+input:checked + label:after {
+    left: calc(100% - 4px);
+    transform: translateX(-100%);
+}
 
 .cookie-options label + span {
     font-size: 16px;
@@ -93,7 +93,6 @@ input:checked + label {
     width: 200px;
     height: 36px;
     border: none;
-    border-radius: 100px;
     color: #fff;
     font-size: 14px;
     margin: 10px;
@@ -105,12 +104,19 @@ input:checked + label {
     background: #5599ff;
 }
 
-    .cookie-button:hover {
-        background: #2a6bb8;
-    }
+.cookie-button-preferences {
+    border: solid;
+    border-width: 2px;
+    color: #5599ff;
+    background: #fff;
+}
 
-    .cookie-button:active {
-        background: #2a6bb8;
-    }
+.cookie-button:hover {
+    background: #2a6bb8;
+}
+
+.cookie-button:active {
+    background: #2a6bb8;
+}
 
 /*** Cookies styles ***/
