--- a/src/ViveCortelazor/Views/_ViewImports.cshtml
+++ b/src/ViveCortelazor/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using ViveCortelazor.Models
 @using Microsoft.AspNetCore.Mvc.Localization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, ViveCortelazor
