--- a/src/ViveCortelazor/Views/Shared/_Layout.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
 
                 <div>
                     <ul class="navbar-nav flex-grow-1 d-none d-lg-block">
-                        @await Html.PartialAsync("_LanguagesCombo")
+                        @await Html.PartialAsync("_LanguagesCombo", "languages-horizontal-menu")
                     </ul>
                 </div>
 
