Add dinamic meta tags #61 #53

--- a/src/ViveCortelazor/Views/Home/Cookies.cshtml
+++ b/src/ViveCortelazor/Views/Home/Cookies.cshtml
@@ -3,7 +3,8 @@
 @inject IViewLocalizer Localizer
 
 @{
-    ViewData["Title"] = Localizer["Cookies"];
+    ViewData["Title"] = $"{Localizer["Cookies"].Value} - Vive Cortelazor - Sierra de Aracena";
+    ViewData["Robots"] = "noindex,follow";
 }
 <div class="container">
     <markdown content="@Html.Raw(Localizer["Cookies Text"].Value)"></markdown>
