--- a/src/ViveCortelazor/Views/Shared/_MetaSeo.cshtml
+++ b/src/ViveCortelazor/Views/Shared/_MetaSeo.cshtml
@@ -1,26 +1,34 @@
-﻿@inject IViewLocalizer Localizer
+﻿@using System.Globalization
+@using ViveCortelazor.Extensions
 
-<meta name="description" content="@Localizer["Description"]" />
-<meta name="keywords" content="@Localizer["Keywords"]" />
-<meta name="image" content="https://www.vivecortelazor.es/images/carousel/image1.jpg" />
+<title>@ViewData["Title"]</title>
+<meta name="description" content="@ViewData["Description"]" />
+<meta name="keywords" content="@ViewData["Keywords"]" />
+<meta name="image" content="@ViewData["Image"]" />
 <meta name="author" content="Evaristo Cuesta" />
 <!-- Google - Search Engine Tags-->
-<meta itemprop="name" content="Vive Cortelazor - Sierra de Aracena" />
-<meta itemprop="description" content="@Localizer["Description"]" />
-<meta itemprop="image" content="https://www.vivecortelazor.es/images/carousel/image1.jpg" />
+<meta itemprop="name" content="@ViewData["Title"]" />
+<meta itemprop="description" content="@ViewData["Description"]" />
+<meta itemprop="image" content="@ViewData["Image"]" />
 <!-- Twitter Meta Tags-->
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Vive Cortelazor - Sierra de Aracena" />
-<meta name="twitter:description" content="@Localizer["Description"]" />
-<meta name="twitter:image" content="https://www.vivecortelazor.es/images/carousel/image1.jpg" />
+<meta name="twitter:title" content="@ViewData["Title"]" />
+<meta name="twitter:description" content="@ViewData["Description"]" />
+<meta name="twitter:image" content="@ViewData["Image"]" />
 <!-- Facebook Meta Tags-->
-<meta property="og:url" content="https://www.evaristocuesta.com" />
+<meta property="og:url" content="@Url.Canonical(ViewContext.RouteData.Values["action"]?.ToString(), @CultureInfo.CurrentCulture.Name)" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Vive Cortelazor - Sierra de Aracena" />
+<meta property="og:title" content="@ViewData["Title"]" />
 <meta property="og:site_name" content="Vive Cortelazor - Sierra de Aracena" />
-<meta property="og:description" content="@Localizer["Description"]" />
-<meta property="og:image" content="https://www.vivecortelazor.es/images/carousel/image1.jpg" />
-<meta property="og:image:secure_url" content="https://www.vivecortelazor.es/images/carousel/image1.jpg" />
-<meta property="og:image:alt" content="@Localizer["Description"]" />
-<meta property="og:image:height" content="1920" />
-<meta property="og:image:width" content="1080" />
+<meta property="og:description" content="@ViewData["Description"]" />
+<meta property="og:image" content="@ViewData["Image"]" />
+<meta property="og:image:secure_url" content="@ViewData["Image"]" />
+<meta property="og:image:alt" content="@ViewData["Description"]" />
+<meta property="og:image:height" content="@ViewData["ImageHeight"]" />
+<meta property="og:image:width" content="@ViewData["ImageWidth"]" />
+<!-- Robots-->
+<meta name="robots" content="@ViewData["Robots"]">
+<!-- Icon-->
+<link rel="icon" type="image/svg+xml" href="~/images/fox.svg">
+<!-- Canonical-->
+<link href="@Url.Canonical(ViewContext.RouteData.Values["action"]?.ToString(), @CultureInfo.CurrentCulture.Name)" rel="canonical" />
