--- a/src/ViveCortelazor/Views/Home/Index.cshtml
+++ b/src/ViveCortelazor/Views/Home/Index.cshtml
@@ -17,9 +17,9 @@
             <button type="button" data-bs-target="#carouselId" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselId" data-bs-slide-to="1" aria-label="Slide 2"></button>
         </div>
-        <div class="carousel-inner" role="listbox">
+        <div class="carousel-inner">
             <div class="carousel-item active">
-                <img loading="lazy" src="~/images/carousel/cortelazor1.jpg" class="img-fluid" alt="Image">
+                <img loading="lazy" src="~/images/carousel/cortelazor1.jpg" class="img-fluid" alt="Cortelazor la Real">
                 <div class="carousel-caption">
                     <div class="text-center p-4">
                         <img class="z-3 main-logo mb-3 mb-md-4" src="~/images/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img loading="lazy" src="~/images/carousel/cortelazor2.jpg" class="img-fluid" alt="Image">
+                <img loading="lazy" src="~/images/carousel/cortelazor2.jpg" class="img-fluid" alt="Cortelazor la Real">
                 <div class="carousel-caption">
                     <div class="text-center p-4">
                         <img class="z-3 main-logo mb-3 mb-md-4" src="~/images/fox.svg" alt="@Localizer["Cortelazor and Sierra de Aracena"]" />
